--- a/client.html
+++ b/client.html
@@ -294,8 +294,16 @@ document.getElementById("showChatRooms").addEventListener("click", Room, false);
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Andy's Chatting Client Ver 1.1.0</a>
                 </div>
-                    <button type="btn btn-default" id = "DASHBOARD" class="btn btn-primary" onClick="welcomeNote();">Show current room and users</button>
+                    <!--<button type="btn btn-default" id = "DASHBOARD" class="btn btn-primary" onClick="welcomeNote();">Show current room and users</button>-->
                     
+
+
+
+
+                        <ul class="nav navbar-nav">
+                        <li class="active"><a href="http://tianqiwu.org">Home</a></li>
+
+    </ul>
             </nav>
                     <p id="conversation"></p>
       
