--- a/client.html
+++ b/client.html
@@ -301,7 +301,8 @@ document.getElementById("showChatRooms").addEventListener("click", Room, false);
 
 
                         <ul class="nav navbar-nav">
-                        <li class="active"><a href="http://tianqiwu.org">Home</a></li>
+                        <li ><a href="http://tianqiwu.org">Home</a></li>
+                        <li ><a href="http://tianqiwu.org">Go back to Main Page</a></li>
 
     </ul>
             </nav>
